# information_system_of_telephone_network

./: .env  .env.example  Makefile  README.md  docker-compose.yml  Требования.txt  задание.txt
backend/: .dockerignore  Cargo.toml  Dockerfile  config.toml
backend/entity/: Cargo.toml
backend/entity/src/: address.rs  app_user.rs  billing_settings.rs  call_record.rs  city.rs  installation_queue.rs  invoice.rs  lib.rs  notification.rs  payment.rs  pbx.rs  pbx_city.rs  pbx_department.rs  pbx_institution.rs  penalty.rs  permission.rs  phone_number.rs  prelude.rs  public_phone.rs  role.rs  role_permission.rs  sea_orm_active_enums.rs  serde_defaults.rs  subscriber.rs  tariff.rs  user_role.rs
backend/migrations/: 0001_init.sql  0002_geo_pbx.sql  0003_numbers_subscribers.sql  0004_calls.sql  0005_billing.sql  0006_queue_public.sql  0007_auth_rbac.sql  0008_triggers.sql  0009_views.sql  0010_seed_reference.sql  0011_more_crud_permissions.sql  0012_customer_portal.sql  0013_triggers_ru.sql  0014_descriptions_ru.sql
backend/scripts/: migrate.sh  postprocess_entities.py
backend/seeds/: dev_seed.sql
backend/server/: Cargo.toml
backend/server/src/: admin.rs  analytics.rs  config.rs  crud.rs  db.rs  error.rs  main.rs  openapi.rs  ops.rs  portal.rs  raw_query.rs  resources.rs  settings.rs  state.rs
backend/server/src/auth/: bootstrap.rs  mod.rs  password.rs  routes.rs  user.rs
docs/: api.md  auth.typ  crud.typ  data-model-story.typ  frontend.typ  guide.typ  migrations.typ  operations.typ  queries.typ  schema.dbml  schema.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts  style.css
(+28 files in other folders)
