[workspace]
resolver = "2"
members = ["entity", "server"]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-rust_decimal",
    "with-json",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
